# ProjectAce

A5-GP-UENetworkTemplate/Source/: UENetworkTemplate.Target.cs  UENetworkTemplateEditor.Target.cs
A5-GP-UENetworkTemplate/Source/ENet6/: ENet6Library.Build.cs
A5-GP-UENetworkTemplate/Source/UENetworkTemplate/: UENetworkTemplate.Build.cs
A5-GP-UENetworkTemplate/Source/UENetworkTemplate/Public/: ENet6NetworkSubsystem.h
AceClient/: ProjectAce.uproject
AceClient/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultInput.ini
AceClient/Content/ProjectAce/Artworks/: AceArtwork.uasset  (+2 more)
AceClient/Content/Splash/: EdSplash.uasset  Splash.uasset
AceClient/Source/: ProjectAce.Target.cs  ProjectAceEditor.Target.cs
AceClient/Source/ProjectAce/: Dummy.cpp  Dummy.h  ProjectAce.Build.cs  ProjectAce.cpp
AceServer/: CMakeLists.txt  CMakeSettings.json
AceServer/src/: AceServer.cpp
AceServer/src/include/: Inputs.h  Protocol.h
AceServer/src/include/math/: angles.hpp  box.hpp  capsule.hpp  quaternion.hpp  ray.hpp  sphere.hpp  utils.hpp  vector2.hpp  vector3.hpp
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
JSBSimSample/: JSBSim.vcxproj
JSBSimSample/UnrealEngine/: UEReferenceApp.uproject
JSBSimSample/UnrealEngine/Config/: DefaultInput.ini
JSBSimSample/src/utilities/: prep_plot.vcxproj
Samples/: Resources.txt
Samples/NetworkServer/: .gitignore  xmake.lua
Samples/UENetworkTemplate/: README.md  UENetworkTemplate.uproject
Samples/UENetworkTemplate/Config/: DefaultEngine.ini  DefaultGame.ini
Samples/UENetworkTemplate/Content/: TestLevel.umap
(+148 files in other folders)
